# swift-atomics

./: .gitignore  .spi.yml  CMakeLists.txt  Package-@swift-5.6.swift  Package.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-5.7.swift  Package@swift-5.8.swift  README.md  generate-sources
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: NEW.md
.github/workflows/: pull_request.yml
Sources/: CMakeLists.txt
Sources/Atomics/: Atomic.swift  AtomicBool.swift.gyb  AtomicInteger.swift  AtomicLazyReference.swift  AtomicLazyReference.swift.gyb  AtomicMemoryOrderings.swift  AtomicOptional.swift  AtomicOptionalRawRepresentable.swift  AtomicOptionalWrappable.swift  AtomicRawRepresentable.swift  AtomicReference.swift  AtomicStrongReference.swift  AtomicValue.swift  CMakeLists.txt  DoubleWord.swift  HighLevelTypes.swift.gyb  IntegerConformances.swift.gyb  IntegerOperations.swift.gyb  ManagedAtomic.swift  PointerConformances.swift.gyb  Primitives.native.swift.gyb  Primitives.shims.swift.gyb  Unmanaged extensions.swift  UnsafeAtomic.swift
Sources/Atomics/Atomics.docc/: Atomics.md
Sources/Atomics/Atomics.docc/Extensions/: AtomicInteger.md  AtomicIntegerStorage.md  AtomicLoadOrdering.md  AtomicOptionalReferenceStorage.md  AtomicOptionalWrappable.md  AtomicRawRepresentableStorage.md  AtomicReference.md  AtomicReferenceStorage.md  AtomicStorage.md  AtomicStoreOrdering.md  AtomicUpdateOrdering.md  AtomicValue.md  ManagedAtomic.md  ManagedAtomicLazyReference.md  UnsafeAtomic.md  UnsafeAtomicLazyReference.md
Sources/Atomics/Conformances/: AtomicBool.swift.gyb  IntegerConformances.swift.gyb  OptionalRawRepresentable.swift  PointerConformances.swift.gyb  RawRepresentable.swift
Sources/Atomics/Conformances/autogenerated/: AtomicBool.swift  IntegerConformances.swift  PointerConformances.swift
Sources/Atomics/Primitives/: Primitives.native.swift.gyb  Primitives.shims.swift.gyb
Sources/Atomics/Primitives/autogenerated/: Primitives.native.swift  Primitives.shims.swift
Sources/Atomics/Protocols/: AtomicInteger.swift  AtomicOptionalWrappable.swift  AtomicReference.swift  AtomicStorage.swift  AtomicValue.swift
Sources/Atomics/Types/: AtomicMemoryOrderings.swift  DoubleWord.swift  IntegerOperations.swift.gyb  ManagedAtomic.swift  ManagedAtomicLazyReference.swift  UnsafeAtomic.swift  UnsafeAtomicLazyReference.swift
Sources/Atomics/Types/autogenerated/: IntegerOperations.swift
Sources/Atomics/autogenerated/: AtomicBool.swift  AtomicLazyReference.swift  HighLevelTypes.swift  IntegerConformances.swift  IntegerOperations.swift  PointerConformances.swift  Primitives.native.swift  Primitives.shims.swift
Sources/_AtomicsShims/: CMakeLists.txt
Sources/_AtomicsShims/include/: _AtomicsShims.h  module.modulemap
Sources/_AtomicsShims/src/: _AtomicsShims.c
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/AtomicsTests/: AtomicLazyReference.swift  Basics.swift.gyb  DoubleWord.swift  LifetimeTracked.swift  LockFreeQueue.swift  LockFreeSingleConsumerStack.swift  StrongReferenceRace.swift  StrongReferenceShuffle.swift  StrongReferenceSubclass.swift  UnsafeAtomicLazyReference.swift  XCTestManifests.swift  main.swift
Tests/AtomicsTests/Basics/: BasicAtomicBoolTests.swift.gyb  BasicAtomicDoubleWordTests.swift.gyb  BasicAtomicInt16Tests.swift.gyb  (+25 more)
Tests/lit/: AtomicsFolding.swift.gyb  UnsafeAtomicInitializers.swift.gyb
Utilities/: generate-sources.sh  gyb_utils.py  run-full-tests.sh
Xcode/: Atomics.xcconfig  Atomics.xctestplan  AtomicsTests.xcconfig  README.md  Shared.xcconfig
Xcode/Atomics.xcodeproj/: project.pbxproj
cmake/modules/: SwiftSupport.cmake
(+30 files in other folders)
