#[[
This source file is part of the Swift Atomics Open Source Project

Copyright (c) 2020 Apple Inc. and the Swift Numerics project authors
Licensed under Apache License v2.0 with Runtime Library Exception

See https://swift.org/LICENSE.txt for license information
#]]

add_subdirectory(_AtomicsShims)
add_subdirectory(Atomics)
